refactor: change auth methods
