# src/dtos/users.dto.ts
@@ -1,42 +1,22 @@
-import { IsString, IsEmail } from 'class-validator';
+import { IsString, IsPhoneNumber, IsNumber } from 'class-validator';
 
 export class CreateUserDto {
-  @IsEmail()
-  public email: string;
-
   @IsString()
   public password: string;
 
-  @IsString()
-  public username: string;
-
-  @IsString()
-  public firstName: string;
-
-  @IsString()
-  public lastName: string;
-
-  @IsString()
+  @IsPhoneNumber()
   public phone: string;
 }
 
-export class LoginUserDto {
-  @IsString()
-  public password: string;
-
-  @IsString()
-  public username: string;
-}
-
 export class OTPUserDto {
-  @IsString()
+  @IsPhoneNumber()
   public phone: string;
 }
 
 export class ValidateOTPUserDto {
-  @IsString()
+  @IsPhoneNumber()
   public phone: string;
 
-  @IsString()
+  @IsNumber()
   public otp: string;
 }
